config-root/namespaces/jx/harbor/templates/ingress/harbor-ingress-ingress.yaml
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: harbor-ingress
  labels:
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-9.6.1
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: jx
spec:
  tls:
    - secretName: harbor-ingress
      hosts:
        - core-harbor-jx.34.89.8.12.nip.io
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-portal
              servicePort: http
          - path: /api
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-core
              servicePort: http
          - path: /service
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-core
              servicePort: http
          - path: /v2
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-core
              servicePort: http
          - path: /chartrepo
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-core
              servicePort: http
          - path: /c
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-core
              servicePort: http
      host: core-harbor-jx.34.89.8.12.nip.io
