config-root/namespaces/jx/harbor/templates/ingress/harbor-ingress-notary-ingress.yaml
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: harbor-ingress-notary
  labels:
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-9.6.1
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: jx
spec:
  tls:
    - secretName: harbor-ingress
      hosts:
        - notary-harbor-jx.change.me
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: harbor-notary-server
              servicePort: 4443
      host: notary-harbor-jx.change.me
